--- a/Parts/Container1/container_content.css
+++ b/Parts/Container1/container_content.css
@@ -104,6 +104,9 @@ body {
         min-height: 600px;
         max-height: 800px;
 
+        min-width: 300px;
+        width: 100vw;
+
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
@@ -897,7 +900,7 @@ video {
     background: rgba(0, 0, 0, 0.0);
     backdrop-filter: blur(5px);
 
-    z-index: 1;
+    z-index: -1; /***1***/
 
 }
 
